--- a/index.html
+++ b/index.html
@@ -240,16 +240,13 @@
                         <p class="text-faded">São Paulo/SP - Brasil</p>
                     </div>
                     <div class="col-lg-3 col-md-4">
-                        <h4>Social</h4>
+                        <h4>Saiba mais</h4>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/startuplauncher/" target="_blank"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                                <a href="https://www.facebook.com/startuplauncher/" target="_blank"><i class="fa fa-facebook fa-fw fa-2x"></i></a>
                             </li>
                             <li>
-                                <a href="#"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
-                            </li>
-                            <li>
-                                <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                                <a href="mailto:atendimento@startuplauncher.com.br"><i class="fa fa-envelope fa-fw fa-2x"></i></a>
                             </li>
                         </ul>
                     </div>
