inclusao imagem bolaogp. remocao imagens antigas.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,22 @@
                 </div>
             </div>
             <div class="row no-gutter popup-gallery">
-                <div class="col-lg-4 col-sm-6 col-md-offset-2"> 
+                 <div class="col-lg-4 col-sm-6"> 
+                     <a href="img/portfolio/fullsize/descontobruto.jpg" class="portfolio-box"> 
+                         <img src="img/portfolio/thumbnails/descontobruto.jpg" class="img-responsive" alt=""> 
+                         <div class="portfolio-box-caption"> 
+                             <div class="portfolio-box-caption-content"> 
+                                 <div class="project-category text-faded"> 
+                                     Portal - Desconto Bruto
+                                 </div> 
+                                 <div class="project-name"> 
+                                     http://descontobruto.com.br 
+                                 </div> 
+                             </div> 
+                         </div> 
+                     </a> 
+                 </div>
+                 <div class="col-lg-4 col-sm-6"> 
                      <a href="img/portfolio/fullsize/removame.jpg" class="portfolio-box"> 
                          <img src="img/portfolio/thumbnails/removame.jpg" class="img-responsive" alt=""> 
                          <div class="portfolio-box-caption"> 
@@ -132,17 +147,17 @@
                              </div> 
                          </div> 
                      </a> 
-                 </div> 
+                 </div>
                  <div class="col-lg-4 col-sm-6"> 
-                     <a href="img/portfolio/fullsize/descontobruto.jpg" class="portfolio-box"> 
-                         <img src="img/portfolio/thumbnails/descontobruto.jpg" class="img-responsive" alt=""> 
+                     <a href="img/portfolio/fullsize/bolaogp.jpg" class="portfolio-box"> 
+                         <img src="img/portfolio/thumbnails/bolaogp.jpg" class="img-responsive" alt=""> 
                          <div class="portfolio-box-caption"> 
                              <div class="portfolio-box-caption-content"> 
                                  <div class="project-category text-faded"> 
-                                     Portal - Desconto Bruto
+                                     Portal - Bolao GP
                                  </div> 
                                  <div class="project-name"> 
-                                     http://descontobruto.com.br 
+                                     http://bolaogp.com.br
                                  </div> 
                              </div> 
                          </div> 
