ajuste link "saiba mais"

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1>Startup Launcher</h1>
                 <hr class="primary">
                 <p>Provemos serviços de TI para seu negócio decolar. Evolua sua startup 10 vezes mais rápido.</p>
-                <a href="#processo" class="btn btn-primary btn-xl page-scroll">Saiba mais</a>
+                <a href="#como-funciona" class="btn btn-primary btn-xl page-scroll">Saiba mais</a>
             </div>
         </div>
     </header>
