inclusao remova.me

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="row no-gutter popup-gallery">
-                 <div class="col-lg-4 col-sm-6"> 
+                 <!--<div class="col-lg-4 col-sm-6"> 
                      <a href="img/portfolio/fullsize/descontobruto.jpg" class="portfolio-box"> 
                          <img src="img/portfolio/thumbnails/descontobruto.jpg" class="img-responsive" alt=""> 
                          <div class="portfolio-box-caption"> 
@@ -128,6 +128,21 @@
                                  </div> 
                                  <div class="project-name"> 
                                      http://descontobruto.com.br 
+                                 </div> 
+                             </div> 
+                         </div> 
+                     </a> 
+                 </div>-->
+                 <div class="col-lg-4 col-sm-6"> 
+                     <a href="img/portfolio/fullsize/bolaogp.jpg" class="portfolio-box"> 
+                         <img src="img/portfolio/thumbnails/bolaogp.jpg" class="img-responsive" alt=""> 
+                         <div class="portfolio-box-caption"> 
+                             <div class="portfolio-box-caption-content"> 
+                                 <div class="project-category text-faded"> 
+                                     Portal - Bolao GP
+                                 </div> 
+                                 <div class="project-name"> 
+                                     http://bolaogp.com.br
                                  </div> 
                              </div> 
                          </div> 
@@ -143,21 +158,6 @@
                                  </div> 
                                  <div class="project-name"> 
                                      http://remova.me
-                                 </div> 
-                             </div> 
-                         </div> 
-                     </a> 
-                 </div>
-                 <div class="col-lg-4 col-sm-6"> 
-                     <a href="img/portfolio/fullsize/bolaogp.jpg" class="portfolio-box"> 
-                         <img src="img/portfolio/thumbnails/bolaogp.jpg" class="img-responsive" alt=""> 
-                         <div class="portfolio-box-caption"> 
-                             <div class="portfolio-box-caption-content"> 
-                                 <div class="project-category text-faded"> 
-                                     Portal - Bolao GP
-                                 </div> 
-                                 <div class="project-name"> 
-                                     http://bolaogp.com.br
                                  </div> 
                              </div> 
                          </div> 
