--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="keywords" content="MEI, Microempreendedor, Microempresario, MEI Encontre, MEIEncontre, Network, Rede, Negócios" />
     <meta name="author" content="MEI Encontre" />
     <title>Startup Launcher</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" href="img/arrow_white_blue-16.png"  sizes="16x16">
+    <link rel="icon" href="img/arrow_white_blue-32.png"  sizes="32x32">
+    <link rel="icon" href="img/arrow_white_blue-48.png"  sizes="48x48">
+    <link rel="icon" href="img/arrow_white_blue-64.png"  sizes="64x64">
+    <link rel="icon" href="img/arrow_white_blue-128.png"  sizes="128x128">
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css' />
