--- a/index.html
+++ b/index.html
@@ -222,27 +222,27 @@
                     <hr class="primary light">
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="col-md-2 col-md-offset-3">
-                <div class="service-box sr-icons">
-                    <a href="#" class="btn btn-default btn-xl" title="app store">
-                        <i class="icon fa fa-apple"></i>App Store
-                    </a>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box sr-icons">
+                        <a href="#" class="btn btn-default btn-xl" title="app store">
+                            <i class="icon fa fa-apple"></i>App Store
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <div class="service-box sr-icons">
-                    <a href="#" class="btn btn-default btn-xl" title="play store">
-                        <i class="icon fa fa-android"></i>Play Store
-                    </a>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box sr-icons">
+                        <a href="#" class="btn btn-default btn-xl" title="play store">
+                            <i class="icon fa fa-android"></i>Play Store
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-2">
-                <div class="service-box sr-icons">
-                    <a href="#" class="btn btn-default btn-xl" title="win store">
-                        <i class="icon fa fa-windows"></i>Win Store
-                    </a>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box sr-icons">
+                        <a href="#" class="btn btn-default btn-xl" title="win store">
+                            <i class="icon fa fa-windows"></i>Win Store
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -253,12 +253,12 @@
         <div class="footer-main">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-4">
+                    <div class="col-lg-3 col-md-6 text-center">
                         <h4>Endereco</h4>
                         <p class="text-faded">Avenida Paulista, 2200</p>
                         <p class="text-faded">São Paulo/SP - Brasil</p>
                     </div>
-                    <div class="col-lg-3 col-md-4">
+                    <div class="col-lg-3 col-md-6 text-center">
                         <h4>Saiba mais</h4>
                         <ul class="list-inline">
                             <li>
@@ -269,7 +269,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-4">
+                    <div class="col-lg-6 col-md-6 text-center">
                         <h4>Solicite uma reunião conosco</h4>
                         <form role="form" method="post" action="api/contact" id="form-cadastro">
                             <div class="form-group">
