ajuster versao mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css' />
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css" />
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
-    <link rel="stylesheet" href="css/map.css" type="text/css" />
     <link rel="stylesheet" href="css/creative.css" type="text/css" />
     <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -258,7 +257,7 @@
                         <p class="text-faded">Avenida Paulista, 2200</p>
                         <p class="text-faded">São Paulo/SP - Brasil</p>
                     </div>
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6 text-center" style="margin-top: 40px">
                         <h4>Saiba mais</h4>
                         <ul class="list-inline">
                             <li>
@@ -269,7 +268,7 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-lg-6 col-md-6 text-center">
+                    <div class="col-lg-6 col-md-6 text-center" style="margin-top: 40px">
                         <h4>Solicite uma reunião conosco</h4>
                         <form role="form" method="post" action="api/contact" id="form-cadastro">
                             <div class="form-group">
