--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="footer-main">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-3 col-md-6 text-center">
+                    <div class="col-lg-3 col-md-6 text-center" style="margin-top: 40px">
                         <h4>Endereco</h4>
                         <p class="text-faded">Avenida Paulista, 2200</p>
                         <p class="text-faded">São Paulo/SP - Brasil</p>
