--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-82496036-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body id="page-top">
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
@@ -302,7 +312,7 @@
             <iframe height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJB4i3Vc1ZzpQRuAiiYC1wm6g&key=AIzaSyAQlGCm1sVFlM1LelO680QFesBfjoOf4Ok" allowfullscreen></iframe>
         </div>
     </footer>
-
+    
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
     <script src="js/parallax.min.js"></script>
