ajuste head metatag

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Startup Launcher o melhor lugar para sua startup" />
-    <meta name="keywords" content="MEI, Microempreendedor, Microempresario, MEI Encontre, MEIEncontre, Network, Rede, Negócios" />
-    <meta name="author" content="MEI Encontre" />
+    <meta name="keywords" content="Startup, Startup TI, Microempreendedor, Microempresario, IT, TI, Network, Rede, Negócios" />
+    <meta name="author" content="StartupLauncher" />
     <title>Startup Launcher</title>
     <link rel="icon" href="img/arrow_white_blue-16.png"  sizes="16x16">
     <link rel="icon" href="img/arrow_white_blue-32.png"  sizes="32x32">
